<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.6</version>
        <relativePath/>
    </parent>
    <groupId>com.example</groupId>
    <artifactId>oracle-database-java-samples</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>oracle-database-java-samples</name>
    <description>Sample Applications Using Oracle Database and Java</description>
    <packaging>pom</packaging>

    <properties>
        <okafka.version>23.6.1.0</okafka.version>
        <oracle.starters.version>25.4.0</oracle.starters.version>
        <spring.cloud.oracle.version>1.4.4</spring.cloud.oracle.version>
        <oracle.version>23.8.0.25.04</oracle.version>
        <kafka.clients.version>3.7.1</kafka.clients.version>
        <oci.sdk.version>3.67.1</oci.sdk.version>
        <java.version>21</java.version>
        <aqapi.jakarta.version>23.7.0.0</aqapi.jakarta.version>
        <jakarta.jms-api.version>3.1.0</jakarta.jms-api.version>
        <jakarta.transaction-api.version>2.0.1</jakarta.transaction-api.version>
        <slf4j.nop.version>2.0.17</slf4j.nop.version>
        <ojdbc.otel.version>1.0.6</ojdbc.otel.version>
    </properties>

    <modules>
        <module>ai-vector-search</module>
        <module>database-per-service-example</module>
        <module>jdbc-event-streaming</module>
        <module>jms-producer-consumer</module>
        <module>migrate-kafka-to-oracle/kafka-app</module>
        <module>migrate-kafka-to-oracle/kafka-app-step-1</module>
        <module>migrate-kafka-to-oracle/kafka-app-step-2</module>
        <module>migrate-kafka-to-oracle/kafka-app-step-3</module>
        <module>news-event-streaming</module>
        <module>oracle-database-kafka-apis</module>
        <module>sessionless-transactions</module>
        <module>spring-boot-cdc</module>
        <module>spring-boot-dynamic-property-source</module>
        <module>spring-boot-jdbc-custom-tracer</module>
        <module>spring-boot-jdbc-tracing</module>
        <module>spring-boot-jms-example</module>
        <module>spring-boot-jms-tracing</module>
        <module>spring-data-mongodb-oracle-api</module>
        <module>spring-jpa</module>
        <module>spring-resource-sample</module>
        <module>spring-vault-oracle-app</module>
        <module>testcontainers</module>
        <module>txeventq-examples</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.oracle.database.messaging</groupId>
                <artifactId>okafka</artifactId>
                <version>${okafka.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.kafka</groupId>
                <artifactId>kafka-clients</artifactId>
                <version>${kafka.clients.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>3.4.5</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.mockito</groupId>
                        <artifactId>mockito-junit-jupiter</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.mockito</groupId>
                        <artifactId>mockito-core</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <!-- OCI SDK -->
            <dependency>
                <groupId>com.oracle.oci.sdk</groupId>
                <artifactId>oci-java-sdk-generativeaiinference</artifactId>
                <version>${oci.sdk.version}</version>
            </dependency>

            <dependency>
                <groupId>com.oracle.oci.sdk</groupId>
                <artifactId>oci-java-sdk-objectstorage</artifactId>
                <version>${oci.sdk.version}</version>
            </dependency>

            <dependency>
                <groupId>com.oracle.oci.sdk</groupId>
                <artifactId>oci-java-sdk-core</artifactId>
                <version>${oci.sdk.version}</version>
            </dependency>

            <dependency>
                <groupId>com.oracle.oci.sdk</groupId>
                <artifactId>oci-java-sdk-common-httpclient-jersey3</artifactId>
                <version>${oci.sdk.version}</version>
            </dependency>

            <!-- JMS -->
            <dependency>
                <groupId>jakarta.transaction</groupId>
                <artifactId>jakarta.transaction-api</artifactId>
                <version>${jakarta.transaction-api.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.jms</groupId>
                <artifactId>jakarta.jms-api</artifactId>
                <version>${jakarta.jms-api.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oracle.database.messaging</groupId>
                <artifactId>aqapi-jakarta</artifactId>
                <version>${aqapi.jakarta.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-nop</artifactId>
                <version>${slf4j.nop.version}</version>
            </dependency>

            <!-- Observability -->
            <dependency>
                <groupId>io.micrometer</groupId>
                <artifactId>micrometer-tracing-bridge-otel</artifactId>
                <version>${micrometer-tracing.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oracle.database.jdbc</groupId>
                <artifactId>ojdbc-provider-opentelemetry</artifactId>
                <version>${ojdbc.otel.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
